# gs-manager

./: .gitignore  Makefile  README.md
debian/: .gitignore  README.Debian  changelog  control  copyright  postinst  prerm  rules
hamlib/: .gitignore
predict/: .gitignore  build  configure  predict.h
sdrpp/: CMakeLists.txt
sdrpp/core/src/: module.cpp
sdrpp/misc_modules/ground_station_mgr/: CMakeLists.txt  readme.md
sdrpp/misc_modules/ground_station_mgr/src/: BaseStateMachine.h  ground_station_mgr.cpp  ground_station_mgr.h  gsm_comm_consumer.cpp  gsm_comm_consumer.h  gsm_comm_mgr.cpp  gsm_comm_mgr.h  gsm_event.cpp  gsm_event.h  gsm_globals.h  gsm_http_client.cpp  gsm_http_client.h  gsm_msg.h  gsm_rotator_controller.cpp  gsm_rotator_controller.h  gsm_satellite.cpp  gsm_satellite.h  gsm_task.cpp  gsm_task.h  gsm_task_state_base.cpp  gsm_task_state_base.h  gsm_task_state_inactive.cpp  gsm_task_state_inactive.h  gsm_task_state_recording.cpp  gsm_task_state_recording.h  gsm_task_state_rotatoraligned.cpp  gsm_task_state_rotatoraligned.h  gsm_task_state_wfgetposrsp.cpp  gsm_task_state_wfgetposrsp.h  gsm_task_state_wfrotatoraligned.cpp  gsm_task_state_wfrotatoraligned.h  gsm_task_state_wftrackingrsp.cpp  gsm_task_state_wftrackingrsp.h  gsm_timer.cpp  gsm_timer.h  gsm_timer_mgr.cpp  gsm_timer_mgr.h  gsm_utils.cpp  gsm_utils.h  http_client.cpp  (+2 more)
sdrpp/root/: config.json  radio_config.json  recorder_config.json
tools/: gsmgrctl
